# groupselect-app

./: .gitignore  Pipfile  README.md  main.py  org.sortitionfoundation.GroupSelect.yml  pyproject.toml
.github/workflows/: build.yml
app/: GSAppFieldMode.py  GSModelManager.py  GSProject.py  main.py
app/generate/: GSGenerateFieldsGroup.py  GSGenerateSettingsGroup.py  GSGenerateTab.py
app/importing/: GSPreviewDialog.py  GSPreviewTableModel.py  GSPreviewTableView.py
app/models/: GSAllocationSettingsModel.py  GSParticipantsFieldsModel.py  GSParticipantsTermsModel.py  GSResultsListModel.py  GSResultsTableModel.py  TAPeopleDataModel.py
app/resources/: about.html
packaging/licenses/: PYSIDE6_LICENSES.txt  QT_LIBRARY_REPLACEMENT.txt  third_party_licenses.py
packaging/windows/: AppxManifest.xml
src/: GSAppFieldMode.py  GSMainTabs.py  GSMainWindow.py  requirements.txt
src/generate/: GSAdvancedSettingsDialog.py  GSGenerateFieldsGroup.py  GSGenerateTab.py  GSManualDialog.py
src/importing/: DataImportHandle.py
src/main/python/: main.py
src/main/python/org/sortition/groupselect/: AppContext.py
src/main/python/org/sortition/groupselect/allocator/: TAAllocationsManager.py  TAAllocator.py
src/main/python/org/sortition/groupselect/data/: TAAppData.py  TAAppDataManager.py  TAFieldsListModel.py  TAFileFormats.py  TAFileImports.py  TAFileSaveManager.py  TAImport.py  TAPeopleDataModel.py
src/main/python/org/sortition/groupselect/data/importers/: TACSVImporter.py  TASpreadsheetImporter.py
src/main/python/org/sortition/groupselect/gui/: TAMainWindow.py
src/main/python/org/sortition/tableallocations/: AppContext.py
src/main/python/org/sortition/tableallocations/allocator/: TAAllocationsManager.py  TAAllocator.py
src/main/python/org/sortition/tableallocations/data/: TAAppData.py  TAAppDataManager.py  TADataExportManager.py  TAFileSaveManager.py
src/main/resources/base/: about.html
src/models/: GSAllocationSettingsModel.py  GSFieldUsageListModel.py  GSManualsListModel.py  GSParticipantsDataModel.py  GSParticipantsFieldsModel.py  GSParticipantsTermsModel.py  GSResultsListModel.py
src/participants/: GSParticipantsDataSubtab.py  GSParticipantsFieldsSubtab.py  GSParticipantsTab.py
src/results/: GSResultTableView.py  GSResultsTab.py
(+48 files in other folders)
