[project]
name = "groupselect-app"
version = "2.0.0"
description = "The GroupSelect App developed by the Sortition Foundation."
authors = [
    { name = "Philipp C. Verpoort", email = "pcv@sortitionfoundation.org" }
]
license = "GNU GPL 3"
package-mode = false
requires-python = ">=3.11,<3.12"
dependencies = [
    "base-app",
    "datahandling",
    "groupselect",
    "pandas>=2.3.3",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
base-app = { git = "https://github.com/PhilippVerpoort/base-app/" }
datahandling = { git = "https://github.com/PhilippVerpoort/datahandling/" }
groupselect = { git = "https://github.com/PhilippVerpoort/groupselect-lib" }
